# plasma-theme-tester

./: CMakeLists.txt  PTTui.rc  elementpainter.cpp  elementpainter.h  main.cpp  mainWindow.ui
